Update tagline and telehealth form referral field
Changed the hero tagline on the homepage to 'The Rx Spot - The All In One Spot'. Updated the telehealth form to use the correct email address and added a required 'Who referred you?' field.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </ul>
 
                     <div class="hero-actions reveal delay-5">
-                        <div class="hero-tagline">RXS for Your Success!</div>
+                        <div class="hero-tagline">The Rx Spot - The All In One Spot</div>
                     </div>
                 </div>
             </div>
