--- a/telehealth.html
+++ b/telehealth.html
@@ -132,8 +132,7 @@
                 </div>
 
                 <!-- FormSubmit Action with Placeholder Email -->
-                <form action="https://formsubmit.co/replace_me@therxspot.com" method="POST"
-                    enctype="multipart/form-data">
+                <form action="https://formsubmit.co/leads@therxspot.com" method="POST" enctype="multipart/form-data">
                     <input type="hidden" name="_subject" value="New Telehealth Onboarding Submission">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
@@ -181,6 +180,11 @@
                                 <option value="Prefer not to say">Prefer not to say</option>
                             </select>
                         </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="referral">Who referred you? *</label>
+                        <input type="text" id="referral" name="referral" required>
                     </div>
 
                     <div class="form-group">
