feat: Add GitHub Actions workflow for automatic Bluehost deployment

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </ul>
 
                     <div class="hero-actions reveal delay-5">
-                        <div class="hero-tagline">The Rx Spot - The All In One Spot</div>
+                        <div class="hero-tagline">The Rx Spot - Your One-Stop, Pharma-Nutra Spot</div>
                     </div>
                 </div>
             </div>
@@ -524,9 +524,6 @@
                         you
                         refer. No inventory, no overhead.</p>
                     <ul class="opportunity-list">
-                        <li>Legit-Scripts certified</li>
-                        <li>Merchant Processing included</li>
-                        <li>Customizable</li>
                         <li>Simple referral link system</li>
                     </ul>
                 </div>
@@ -538,11 +535,14 @@
                     </div>
                     <p>Launch your own branded telehealth business powered by our infrastructure in 24 hrs. We
                         handle fulfillment, compliance, and support—you keep the revenue.</p>
-                    <ul class="opportunity-list">
+                    <ul class="opportunity-list split-list">
                         <li>White-label patient portal</li>
                         <li>Full back-office support</li>
                         <li>Licensed provider network included</li>
                         <li>Custom domain & branding</li>
+                        <li>Legit-Scripts certified</li>
+                        <li>Merchant Processing included</li>
+                        <li>Customizable</li>
                     </ul>
                 </div>
             </div>
