--- a/telehealth.html
+++ b/telehealth.html
@@ -42,6 +42,7 @@
             width: 100%;
             max-width: 600px;
             border: 1px solid var(--color-gray-200);
+            margin: 0 auto;
         }
 
         .form-header {
@@ -106,8 +107,8 @@
 
 <body>
 
-    <!-- Navigation (Simplified for standalone page) -->
-    <nav id="main-nav" class="nav-sticky" style="background: var(--color-brand-navy);">
+    <!-- Navigation (Simplified, matches main site behavior) -->
+    <nav id="main-nav" class="nav-sticky">
         <div class="nav-main-content">
             <div class="container">
                 <div class="nav-wrapper">
@@ -118,24 +119,54 @@
                     <div class="nav-links">
                         <a href="index.html">Back to Home</a>
                     </div>
+
+                    <!-- Right Side Actions: Phone Only -->
+                    <div class="nav-actions-stack">
+                        <a href="tel:+18888437977" class="btn-phone">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                                </path>
+                            </svg>
+                            <span>(888) THERXSPOT</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </nav>
 
+    <!-- Hero Section (Standardized Match) -->
+    <section class="hero hero-short">
+        <div class="hero-background">
+            <img src="images/processed/modern_hero.png" alt="" class="hero-bg-image">
+            <div class="hero-overlay"></div>
+        </div>
+        <div class="container">
+            <div class="hero-content">
+                <!-- Main Headline using proper class for white text -->
+                <h1 class="hero-sub reveal delay-1" style="font-size: var(--text-4xl); margin-bottom: 0; opacity: 1;">
+                    Telehealth Onboarding
+                </h1>
+            </div>
+        </div>
+    </section>
+
     <section class="onboarding-section">
         <div class="container">
             <div class="form-card">
                 <div class="form-header">
-                    <h1>Telehealth Platform Onboarding</h1>
                     <p>Please finish providing your information below.</p>
                 </div>
 
-                <!-- FormSubmit Action with Placeholder Email -->
-                <form action="https://formsubmit.co/leads@therxspot.com" method="POST" enctype="multipart/form-data">
+                <!-- FormSubmit Action with Onboarding Emails -->
+                <form action="https://formsubmit.co/vsdh.onboarding@gmail.com" method="POST"
+                    enctype="multipart/form-data">
                     <input type="hidden" name="_subject" value="New Telehealth Onboarding Submission">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_cc" value="PlatformOB@therxspot.com,Sbpalmer@therxspot.com">
                     <!-- Redirect back to this page or a thank you page (optional, defaults to formsubmit page) -->
                     <input type="hidden" name="_next" value="https://therxspot.com/telehealth.html">
 
@@ -145,8 +176,19 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="phone">Phone Number *</label>
-                        <input type="tel" id="phone" name="phone" required>
+                        <label for="ownerName">Owner's Name *</label>
+                        <input type="text" id="ownerName" name="ownerName" required>
+                    </div>
+
+                    <div class="form-row" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                        <div class="form-group">
+                            <label for="businessPhone">Business Phone *</label>
+                            <input type="tel" id="businessPhone" name="businessPhone" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="ownerPhone">Owner's Phone *</label>
+                            <input type="tel" id="ownerPhone" name="ownerPhone" required>
+                        </div>
                     </div>
 
                     <div class="form-row" style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
@@ -209,6 +251,9 @@
             </div>
         </div>
     </footer>
+
+    <!-- Scripts -->
+    <script src="main.js"></script>
 
 </body>
 
