--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                 <div class="hero-text-content">
                     <ul class="hero-feature-list">
-                        <li class="feature-item feature-item-clickable reveal-left delay-5" data-modal="b2b-modal">
+                        <li class="feature-item feature-item-clickable reveal-left delay-1" data-modal="b2b-modal">
                             <div class="feature-content">
                                 <h4 class="feature-heading">Are you</h4>
                                 <p class="feature-text">A clinic, medspa or pharmacy looking for steady access &
@@ -96,7 +96,7 @@
                                     nutraceuticals?</p>
                             </div>
                         </li>
-                        <li class="feature-item feature-item-clickable reveal-left delay-3" data-modal="b2b-modal">
+                        <li class="feature-item feature-item-clickable reveal-left delay-2" data-modal="b2b-modal">
                             <div class="feature-content">
                                 <h4 class="feature-heading">Are you</h4>
                                 <p class="feature-text">A telehealth platform, clinic or medspa looking for a pharmacy
@@ -104,20 +104,27 @@
                                     competitive pricing?</p>
                             </div>
                         </li>
-                        <li class="feature-item feature-item-clickable reveal-right delay-3"
-                            data-modal="opportunities-modal">
+                        <li class="feature-item feature-item-clickable reveal delay-3" data-modal="opportunities-modal">
                             <div class="feature-content">
                                 <h4 class="feature-heading">Are you</h4>
                                 <p class="feature-text">Looking for business opportunity in one of the fastest growing &
                                     in-demand industries?</p>
                             </div>
                         </li>
-                        <li class="feature-item feature-item-clickable reveal-right delay-5"
+                        <li class="feature-item feature-item-clickable reveal-right delay-2"
                             data-link="https://patients.therxspot.com/business/y9ak5uxn/rpcx28i2">
                             <div class="feature-content">
                                 <h4 class="feature-heading">Are you</h4>
                                 <p class="feature-text">A patient looking to start your wellness journey with a team of
                                     medical professionals?</p>
+                            </div>
+                        </li>
+                        <li class="feature-item feature-item-clickable reveal-right delay-1"
+                            data-modal="nutrition-modal">
+                            <div class="feature-content">
+                                <h4 class="feature-heading">Are you</h4>
+                                <p class="feature-text">A gym, telehealth platform, or business looking to add a premium
+                                    nutrition and supplement line to better serve your clients and increase revenue?</p>
                             </div>
                         </li>
                     </ul>
@@ -1040,6 +1047,139 @@
                         <label for="opp-message">Tell us about your background (optional)</label>
                         <textarea id="opp-message" name="message" rows="3"
                             placeholder="Sales experience, audience size, business goals, etc."></textarea>
+                    </div>
+
+                    <button type="submit" class="btn-primary btn-block btn-lg">Submit Interest Form</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- Nutrition Business Modal -->
+    <div id="nutrition-modal" class="modal">
+        <div class="modal-overlay"></div>
+        <div class="modal-container modal-large">
+            <div class="modal-header">
+                <h3>Nutrition Business Interest Form</h3>
+                <button class="modal-close" aria-label="Close modal">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M18 6L6 18M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                    </svg>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <p class="modal-intro" style="margin-bottom: 8px;">Interested in adding a premium nutrition and
+                    supplement line to your business? Fill out this form and our team will reach out within 1-2 business
+                    days.</p>
+                <p style="margin-bottom: 20px; font-size: 0.85rem; color: #6b7280; font-style: italic;">* Indicates
+                    required field</p>
+
+                <form class="modal-form" id="nutrition-form" action="https://formsubmit.co/nutra@therxspot.com"
+                    method="POST">
+                    <input type="hidden" name="_subject" value="New Nutrition Business Interest Form Submission">
+                    <input type="hidden" name="_template" value="box">
+                    <input type="hidden" name="_captcha" value="false">
+
+                    <div class="form-group">
+                        <label for="nutra-business-name">Business Name *</label>
+                        <input type="text" id="nutra-business-name" name="businessName" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="nutra-owner-name">Owner's Name *</label>
+                        <input type="text" id="nutra-owner-name" name="ownerName" required>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="nutra-business-phone">Business Phone *</label>
+                            <input type="tel" id="nutra-business-phone" name="businessPhone" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="nutra-owner-phone">Owner's Phone *</label>
+                            <input type="tel" id="nutra-owner-phone" name="ownerPhone" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="nutra-email">Email Address *</label>
+                        <input type="email" id="nutra-email" name="email" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="nutra-address">Address *</label>
+                        <input type="text" id="nutra-address" name="address" required>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="nutra-state">State *</label>
+                            <input type="text" id="nutra-state" name="state" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="nutra-zip">Zip Code *</label>
+                            <input type="text" id="nutra-zip" name="zipCode" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="checkbox-group-label">What products are you interested in? *</label>
+                        <p class="helper-text">Select all that apply</p>
+
+                        <div class="checkbox-list">
+                            <label class="checkbox-item">
+                                <input type="checkbox" name="products" value="supplements">
+                                <div class="checkbox-content">
+                                    <strong>Supplements</strong>
+                                    <span>Premium vitamins, minerals, and wellness supplements</span>
+                                </div>
+                            </label>
+
+                            <label class="checkbox-item">
+                                <input type="checkbox" name="products" value="drinks">
+                                <div class="checkbox-content">
+                                    <strong>Drinks</strong>
+                                    <span>Functional beverages and hydration products</span>
+                                </div>
+                            </label>
+
+                            <label class="checkbox-item">
+                                <input type="checkbox" name="products" value="shakes">
+                                <div class="checkbox-content">
+                                    <strong>Shakes</strong>
+                                    <span>Protein shakes and meal replacement options</span>
+                                </div>
+                            </label>
+
+                            <label class="checkbox-item">
+                                <input type="checkbox" name="products" value="snacks">
+                                <div class="checkbox-content">
+                                    <strong>Snacks</strong>
+                                    <span>Healthy, on-the-go nutrition snack options</span>
+                                </div>
+                            </label>
+
+                            <label class="checkbox-item">
+                                <input type="checkbox" name="products" value="meals">
+                                <div class="checkbox-content">
+                                    <strong>Meals</strong>
+                                    <span>Complete meal solutions and meal prep options</span>
+                                </div>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="nutra-referral">Who referred you? *</label>
+                        <input type="text" id="nutra-referral" name="referral" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="nutra-message">Tell us about your business (optional)</label>
+                        <textarea id="nutra-message" name="message" rows="3"
+                            placeholder="What type of business do you operate? What are your goals for adding nutrition products?"></textarea>
                     </div>
 
                     <button type="submit" class="btn-primary btn-block btn-lg">Submit Interest Form</button>
