Add diagonal reveal animations for hero boxes - Box 1: from left, Box 2: from bottom-left (45deg), Box 3: from bottom, Box 4: from bottom-right (45deg), Box 5: from right - Creates dynamic fan-out effect

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                                     nutraceuticals?</p>
                             </div>
                         </li>
-                        <li class="feature-item feature-item-clickable reveal-left delay-2" data-modal="b2b-modal">
+                        <li class="feature-item feature-item-clickable reveal-bottom-left delay-2"
+                            data-modal="b2b-modal">
                             <div class="feature-content">
                                 <h4 class="feature-heading">Are you</h4>
                                 <p class="feature-text">A telehealth platform, clinic or medspa looking for a pharmacy
@@ -111,7 +112,7 @@
                                     in-demand industries?</p>
                             </div>
                         </li>
-                        <li class="feature-item feature-item-clickable reveal-right delay-2"
+                        <li class="feature-item feature-item-clickable reveal-bottom-right delay-2"
                             data-link="https://patients.therxspot.com/business/y9ak5uxn/rpcx28i2">
                             <div class="feature-content">
                                 <h4 class="feature-heading">Are you</h4>
