--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -20,7 +20,6 @@
     <style>
         /* Ready Pro Brand Overrides */
         :root {
-            /* Ready Pro Teal derived from logo #01b5c6 */
             --color-accent-cyan: #01b5c6;
             --color-accent-cyan-light: #4defff;
             --color-ready-teal: #01b5c6;
@@ -34,7 +33,8 @@
         }
 
         .onboarding-section {
-            padding: 120px 0 60px;
+            padding: 140px 0 60px;
+            /* Increased top padding for larger nav */
             flex-grow: 1;
             display: flex;
             align-items: center;
@@ -47,12 +47,10 @@
             padding: 40px;
             border-radius: var(--radius-xl);
             box-shadow: 0 20px 40px rgba(1, 181, 198, 0.15);
-            /* Teal shadow */
             width: 100%;
             max-width: 650px;
             border: 1px solid var(--color-gray-200);
             border-top: 6px solid var(--color-ready-teal);
-            /* Brand accent top border */
             margin: 0 auto;
         }
 
@@ -65,31 +63,13 @@
             font-family: var(--font-heading);
             color: var(--color-brand-navy);
             font-size: 2rem;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
-        .form-header p {
-            color: var(--color-gray-600);
-        }
-
-        .partner-logo-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 30px;
-        }
-
-        .partner-logo {
-            height: 70px;
-            width: auto;
-            object-fit: contain;
-        }
-
-        .partner-divider {
-            font-size: 1.5rem;
-            color: var(--color-gray-400);
-            font-weight: 300;
+        .form-logo-center {
+            max-width: 180px;
+            margin: 0 auto 20px;
+            display: block;
         }
 
         .form-group {
@@ -134,7 +114,6 @@
             background-color: rgba(1, 181, 198, 0.05);
         }
 
-        /* Custom Submit Button Style for Mesh Branding */
         .btn-submit-partner {
             background: linear-gradient(135deg, var(--color-ready-teal) 0%, var(--color-brand-navy) 100%);
             color: white;
@@ -153,14 +132,65 @@
             box-shadow: 0 8px 20px rgba(1, 181, 198, 0.3);
         }
 
-        /* Nav adjustment for this page if needed */
+        /* Nav Overrides for Partner Logo Mashup */
         .nav-sticky {
-            background: rgba(255, 255, 255, 0.9) !important;
+            background: rgba(255, 255, 255, 0.95) !important;
             backdrop-filter: blur(10px);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
         }
 
-        .nav-links a {
-            color: var(--color-brand-navy) !important;
+        .nav-wrapper {
+            display: flex;
+            /* Flex instead of grid for custom layout */
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        /* Hide default logo styling to create custom dual container */
+        .logo {
+            display: none !important;
+        }
+
+        .partner-nav-brand {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .brand-logo-img {
+            height: 70px;
+            /* Adjust based on crop */
+            width: auto;
+            object-fit: contain;
+        }
+
+        .divider-line {
+            height: 40px;
+            width: 1px;
+            background-color: var(--color-gray-300);
+        }
+
+        .nav-links {
+            margin-left: auto;
+            margin-right: 40px;
+        }
+
+        @media (max-width: 768px) {
+            .partner-nav-brand {
+                gap: 10px;
+            }
+
+            .brand-logo-img {
+                height: 50px;
+            }
+
+            .nav-links {
+                display: none;
+            }
+        }
+
+        .nav-actions-stack {
+            display: flex;
         }
 
         .btn-phone {
@@ -175,18 +205,25 @@
     <!-- Navigation -->
     <nav id="main-nav" class="nav-sticky">
         <div class="nav-main-content">
-            <div class="container">
+            <div class="container-wide"> <!-- Use Wide container for more space -->
                 <div class="nav-wrapper">
-                    <!-- Standard Rx Spot Logo in Nav -->
-                    <a href="index.html" class="logo">
-                        <img src="images/processed/TheRxSpot_Logo_WebHD.png" alt="The Rx Spot" class="logo-image">
-                    </a>
 
-                    <div class="nav-links">
-                        <a href="index.html">Back to Home</a>
+                    <!-- Dual Logo Brand Area -->
+                    <div class="partner-nav-brand">
+                        <a href="index.html">
+                            <img src="images/readypro-logo-cropped.png" alt="Ready Pro" class="brand-logo-img">
+                        </a>
+                        <div class="divider-line"></div>
+                        <a href="index.html">
+                            <img src="images/processed/TheRxSpot_Logo_WebHD.png" alt="The Rx Spot"
+                                class="brand-logo-img">
+                        </a>
                     </div>
 
-                    <!-- Right Side Actions: Phone Only -->
+                    <div class="nav-links">
+                        <a href="index.html" style="color: var(--color-brand-navy) !important;">Back to Home</a>
+                    </div>
+
                     <div class="nav-actions-stack">
                         <a href="tel:+18888437977" class="btn-phone">
                             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -206,20 +243,14 @@
     <!-- Content Section -->
     <section class="onboarding-section">
         <div class="container">
-            <!-- Branding Header above Form -->
-            <div class="partner-logo-container">
-                <img src="images/readypro-logo.jpg" alt="Ready Pro" class="partner-logo" style="border-radius: 8px;">
-                <span class="partner-divider">+</span>
-                <img src="images/processed/TheRxSpot_Logo_WebHD.png" alt="The Rx Spot" class="partner-logo">
-            </div>
 
             <div class="form-card">
+                <!-- Inner Brand Reinforcement -->
+                <img src="images/readypro-logo-cropped.png" alt="Ready Pro" class="form-logo-center">
+
                 <div class="form-header">
                     <h1>Ready Pro Telehealth</h1>
-                    <p style="font-size: 1.1em; color: var(--color-ready-teal); font-weight: 500;">Exclusive Partnership
-                        Onboarding</p>
-                    <p style="margin-top: 10px;">Please complete your practice information below to get started with the
-                        Ready Pro & Rx Spot program.</p>
+                    <p>Please complete your practice information below to get started.</p>
                 </div>
 
                 <!-- FormSubmit Action: Separate Email (Placeholder: readypro@therxspot.com) -->
@@ -290,7 +321,7 @@
                         <label for="referral">Who referred you? *</label>
                         <input type="text" id="referral" name="referral" required value="Ready Pro Partnership" readonly
                             style="background-color: var(--color-gray-100); color: var(--color-gray-500);">
-                        <small style="color: var(--color-gray-500);">Pre-filled for Ready Pro Partners</small>
+                        <small style="color: var(--color-gray-500);">Pre-filled</small>
                     </div>
 
                     <div class="form-group">
@@ -300,7 +331,7 @@
                             PNG, JPG, SVG</small>
                     </div>
 
-                    <button type="submit" class="btn-submit-partner">Submit Partnership Application</button>
+                    <button type="submit" class="btn-submit-partner">Submit Information</button>
 
                     <div style="text-align: center; margin-top: 15px; font-size: 0.9em; color: var(--color-gray-500);">
                         Powered by The Rx Spot & Ready Pro Nutrition
