--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -66,12 +66,6 @@
             margin-bottom: 15px;
         }
 
-        .form-logo-center {
-            max-width: 180px;
-            margin: 0 auto 20px;
-            display: block;
-        }
-
         .form-group {
             margin-bottom: 20px;
         }
@@ -159,7 +153,6 @@
 
         .brand-logo-img {
             height: 70px;
-            /* Adjust based on crop */
             width: auto;
             object-fit: contain;
         }
@@ -211,7 +204,7 @@
                     <!-- Dual Logo Brand Area -->
                     <div class="partner-nav-brand">
                         <a href="index.html">
-                            <img src="images/readypro-logo-cropped.png" alt="Ready Pro" class="brand-logo-img">
+                            <img src="images/Readypro-cropped.jpg" alt="Ready Pro" class="brand-logo-img">
                         </a>
                         <div class="divider-line"></div>
                         <a href="index.html">
@@ -245,8 +238,6 @@
         <div class="container">
 
             <div class="form-card">
-                <!-- Inner Brand Reinforcement -->
-                <img src="images/readypro-logo-cropped.png" alt="Ready Pro" class="form-logo-center">
 
                 <div class="form-header">
                     <h1>Ready Pro Telehealth</h1>
