Update Ready Pro text and tagline as requested

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -201,9 +201,13 @@
         </div>
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-sub reveal delay-1" style="font-size: var(--text-4xl); margin-bottom: 0; opacity: 1;">
-                    Ready Pro Partnership
+                <h1 class="hero-sub reveal delay-1" style="font-size: 5rem; margin-bottom: 0; opacity: 1;">
+                    Ready Pro
                 </h1>
+                <p
+                    style="font-family: 'Dancing Script', cursive; font-size: 2.5rem; color: var(--color-ready-teal); margin-top: 10px;">
+                    When You Eat Less, Every Bite Matters More
+                </p>
             </div>
         </div>
     </section>
@@ -215,7 +219,6 @@
             <div class="form-card">
 
                 <div class="form-header">
-                    <h1>Ready Pro Telehealth</h1>
                     <p>Please complete your practice information below to get started.</p>
                 </div>
 
