Adjust Ready Pro page layout: logo size +20%, tagline font to Outfit, fix header overlap

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -40,8 +40,8 @@
         }
 
         .partner-logo-img {
-            height: 60px;
-            /* Adjust height to look good next to the larger logo */
+            height: 75px;
+            /* Increased by ~20% from 60px */
             width: auto;
             border-radius: 4px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
@@ -165,7 +165,7 @@
                         <!-- Ready Pro Logo (New) -->
                         <img src="images/Readypro-cropped.jpg" alt="Ready Pro" class="partner-logo-img">
 
-                        <div class="brand-divider"></div>
+                        <div class="brand-divider" style="margin-top: 10px;"></div>
 
                         <!-- The Rx Spot Standard Logo Container -->
                         <a href="index.html" class="logo">
@@ -200,12 +200,12 @@
             <div class="hero-overlay"></div>
         </div>
         <div class="container">
-            <div class="hero-content">
+            <div class="hero-content" style="padding-top: 140px;">
                 <h1 class="hero-sub reveal delay-1" style="font-size: 5rem; margin-bottom: 0; opacity: 1;">
                     Ready Pro
                 </h1>
                 <p
-                    style="font-family: 'Dancing Script', cursive; font-size: 2.5rem; color: var(--color-ready-teal); margin-top: 10px;">
+                    style="font-family: 'Outfit', sans-serif; font-weight: 700; font-size: 2.2rem; color: var(--color-ready-teal); margin-top: 15px; letter-spacing: -0.02em;">
                     When You Eat Less, Every Bite Matters More
                 </p>
             </div>
