Increase hero height to 450px to fix overlap

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -194,13 +194,13 @@
     </nav>
 
     <!-- Hero Section (Standard) -->
-    <section class="hero hero-short">
+    <section class="hero hero-short" style="height: 450px; min-height: 450px;">
         <div class="hero-background">
             <img src="images/processed/modern_hero.png" alt="" class="hero-bg-image">
             <div class="hero-overlay"></div>
         </div>
         <div class="container">
-            <div class="hero-content" style="padding-top: 140px;">
+            <div class="hero-content" style="padding-top: 120px;">
                 <h1 class="hero-sub reveal delay-1" style="font-size: 5rem; margin-bottom: 0; opacity: 1;">
                     Ready Pro
                 </h1>
