Force center alignment for Ready Pro title and tagline

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -173,6 +173,7 @@
                 color: var(--color-brand-navy);
                 margin-bottom: 5px;
                 line-height: 1.2;
+                text-align: center;
             }
 
             .partner-tagline {
@@ -182,6 +183,7 @@
                 color: var(--color-ready-teal);
                 font-style: italic;
                 letter-spacing: 0.02em;
+                text-align: center;
             }
 
             .nav-actions-stack {
