Force center alignment of Ready Pro header using flexbox

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -160,6 +160,10 @@
             }
 
             .partner-header {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
                 text-align: center;
                 margin-bottom: 30px;
                 padding-bottom: 20px;
@@ -173,7 +177,9 @@
                 color: var(--color-brand-navy);
                 margin-bottom: 5px;
                 line-height: 1.2;
-                text-align: center;
+                text-align: center !important;
+                display: block;
+                width: 100%;
             }
 
             .partner-tagline {
@@ -183,7 +189,9 @@
                 color: var(--color-ready-teal);
                 font-style: italic;
                 letter-spacing: 0.02em;
-                text-align: center;
+                text-align: center !important;
+                display: block;
+                width: 100%;
             }
 
             .nav-actions-stack {
