Add inline styles to force center alignment on Ready Pro title

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -259,9 +259,10 @@
 
             <div class="form-card">
 
-                <div class="partner-header">
-                    <h2 class="partner-title">Ready Pro</h2>
-                    <p class="partner-tagline">When You Eat Less, Every Bite Matters More</p>
+                <div class="partner-header" style="text-align: center;">
+                    <h2 class="partner-title" style="text-align: center !important; width: 100%;">Ready Pro</h2>
+                    <p class="partner-tagline" style="text-align: center !important; width: 100%;">When You Eat Less,
+                        Every Bite Matters More</p>
                 </div>
 
                 <div class="form-header">
