Make Ready Pro logo clickable linking to external site

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -211,7 +211,9 @@
                     <!-- Brand Group: Partner + Standard Rx Logo -->
                     <div class="nav-brand-group">
                         <!-- Ready Pro Logo (New) -->
-                        <img src="images/Readypro-cropped.jpg" alt="Ready Pro" class="partner-logo-img">
+                        <a href="https://readypronutrition.com" target="_blank" rel="noopener noreferrer">
+                            <img src="images/Readypro-cropped.jpg" alt="Ready Pro" class="partner-logo-img">
+                        </a>
 
                         <div class="brand-divider" style="margin-top: 10px;"></div>
 
