Add descriptive paragraph to Ready Pro header

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -263,8 +263,13 @@
 
                 <div class="partner-header" style="text-align: center;">
                     <h2 class="partner-title" style="text-align: center !important; width: 100%;">Ready Pro</h2>
-                    <p class="partner-tagline" style="text-align: center !important; width: 100%;">When You Eat Less,
-                        Every Bite Matters More</p>
+                    <p class="partner-tagline" style="text-align: center !important; width: 100%; margin-bottom: 15px;">
+                        When You Eat Less, Every Bite Matters More</p>
+                    <p class="partner-description"
+                        style="text-align: center !important; width: 100%; font-family: 'Inter', sans-serif; font-size: 1rem; color: var(--color-gray-600); max-width: 600px; margin: 0 auto;">
+                        Protein forward foods that help you feel your best - for GLP-1 users, weight loss maintainers,
+                        and anyone done with the "diet" drama.
+                    </p>
                 </div>
 
 
